<resources>
    <string name="app_name">My Earnings</string>
    <string name="action_settings">Preferences</string>
    <string name="hours_worked">Enter hours worked:</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_activity">Calculate</string>
    <string name="name">Name</string>
    <string name="pay_period">How often are you paid?</string>
    <string name="weekly">Weekly</string>
    <string name="fortnightly">Fortnightly</string>
    <string name="monthly">Monthly</string>
    <string name="tax_code">What is your tax code?</string>
    <string name="m">M</string>
    <string name="me">ME</string>
    <string name="ml">ML</string>
    <string name="kiwi_saver">What percentage of your pay goes to Kiwi Saver?</string>
    <string name="none">None</string>
    <string name="sl">SL (Student Loan)</string>
    <string name="pay_rate">How much are you paid per hour?</string>
    <string name="save">Save</string>
    <string name="gross">Gross : $</string>
    <string name="paye">PAYE : $</string>
    <string name="nett">NETT : $</string>
    <string name="studentLoadCalc">Student Loan : $</string>
    <string name="kiwi_saver_calc">Kiwi Saver : $</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="student_loan">Do you have a student loan?</string>
    <string name="help">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="advanced_on">Advanced ON</string>
    <string name="advanced_off">Advanced OFF</string>
    <string name="time_and_a_half">Time and a half</string>
    <string name="double_time">Double time</string>

    <!-- Help Strings  -->
    <string name="pay_period_title">How often are you paid?</string>
    <string name="pay_period_description">Select "Weekly" if you are paid every 7 days.
    Select "Fortnigtly" if you are paid every 14 days (2 weeks).
    Select "Monthly" if you paid on the same day every month, i.e. you are paid on the 15th of every month.</string>

    <string name="tax_code_title"></string>
    <string name="tax_code_description"></string>

    <string name="kiwi_saver_title"></string>
    <string name="kiwi_saver_description"></string>

    <string name="student_loan_title"></string>
    <string name="student_loan_description"></string>

    <string name="pay_rate_title"></string>
    <string name="pay_rate_description"></string>
</resources>
