<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextHoursWorked"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hours_worked"
        android:imeActionLabel="Calculate" />

    <Button
        android:id="@+id/buttonCalculate"
        style="android:buttonStyleToggle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/calculate"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/tbAdvanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/advanced_off"
        android:textOn="@string/advanced_on" />

    <EditText
        android:id="@+id/etTimeAndAHalf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/time_and_a_half"
        android:ems="10"
        android:visibility="gone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etDoubleTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/double_time"
        android:ems="10"
        android:visibility="gone" />

</LinearLayout>
