<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" tools:context=".PreferencesActivity"
              android:orientation="vertical">


    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_gravity="top">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_gravity="left|center_vertical|top" android:rowCount="10"
                android:columnCount="3" android:orientation="vertical"
                android:visibility="visible"
                android:useDefaultMargins="false"
                >
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextName" 
                    android:layout_gravity="center_horizontal|top"
                    android:hint="@string/name"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_period"
                    android:id="@+id/textView4" android:layout_gravity="left|center_vertical"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ToggleButton
                    android:id="@+id/tbWeekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/weekly"
                    android:textOff="@string/weekly" />

                <ToggleButton
                    android:id="@+id/tbFortnightly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/fortnightly"
                    android:textOff="@string/fortnightly" />
                
                <ToggleButton
                    android:id="@+id/tbMonthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/monthly"
                    android:textOff="@string/monthly" />

				<RelativeLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" >

	                <ImageButton
	                    android:id="@+id/bHelpPayPeriod"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentTop="true"
	                    android:contentDescription="@string/help"
	                    android:src="@android:drawable/ic_dialog_info"
	                    android:text="@string/help" />

                </RelativeLayout>

            </LinearLayout>

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </RadioGroup>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/tax_code"
                    android:id="@+id/textView2" android:layout_gravity="left|center_vertical" android:layout_weight="0.09"
                    />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ToggleButton
                    android:id="@+id/tbTaxCodeM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/m"
                    android:textOff="@string/m" />

                <ToggleButton
                    android:id="@+id/tbTaxCodeME"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/me"
                    android:textOff="@string/me" />
                <RelativeLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" >

	                <ImageButton
	                    android:id="@+id/bHelpTaxCode"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentTop="true"
	                    android:contentDescription="@string/help"
	                    android:src="@android:drawable/ic_dialog_info"
	                    android:text="@string/help" />

	            </RelativeLayout>

            </LinearLayout>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
                    >
            </RadioGroup>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kiwi_saver"
                    android:id="@+id/textView3" />
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            <NumberPicker 
                android:id="@+id/npKiwiSaver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RelativeLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" >
	            <ImageButton 
	                    android:id="@+id/bHelpKiwiSaver"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentTop="true"
	                    android:text="@string/help"
	                    android:src="@android:drawable/ic_dialog_info"
	                    android:contentDescription="@string/help"/>
	        </RelativeLayout>
            </LinearLayout>
            
            
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
                    >
            </RadioGroup>

            <TextView
                android:id="@+id/informationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_loan" />
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <ToggleButton
                    android:id="@+id/tbStudentLoan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="@string/yes"
                    android:textOff="@string/no" />
                <RelativeLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" >
	                <ImageButton 
	                    android:id="@+id/bHelpStudentLoan"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentTop="true"
	                    android:text="@string/help"
	                    android:src="@android:drawable/ic_dialog_info"
	                    android:contentDescription="@string/help"/>
	            </RelativeLayout>
                
             </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_rate"
                    android:id="@+id/textView5" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextPayRate" android:layout_gravity="fill_horizontal|left" />
            	<RelativeLayout
				    android:layout_width="match_parent"
				    android:layout_height="match_parent" >
	                <ImageButton 
	                    android:id="@+id/bHelpPayRate"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentTop="true"
	                    android:text="@string/help"
	                    android:src="@android:drawable/ic_dialog_info"
	                    android:contentDescription="@string/help"/>
	            </RelativeLayout>
            </LinearLayout>

            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/buttonSave" android:layout_gravity="fill_horizontal|center_vertical" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>